--- a/index.html
+++ b/index.html
@@ -405,11 +405,11 @@
     }
 
     .solutionsfalse {
-      display: block;
+      display: none;
     }
 
     .solutionstrue {
-      display: none;
+      display: block;
     }
 
     @media print {
@@ -550,7 +550,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" raw="# Overview" lo="1" class="">
+        <a href="#overview" raw="# Overview" lo="1">
           <span class="toctext">Overview</span>
         </a>
       </li>
@@ -585,7 +585,7 @@
             </a>
           </li>
           <li>
-            <a href="#enclosed-charge" raw="## Enclosed Charge" lo="78" class="highlighted">
+            <a href="#enclosed-charge" raw="## Enclosed Charge" lo="78">
               <span class="toctext">Enclosed Charge</span>
             </a>
           </li>
@@ -610,13 +610,8 @@
             </a>
           </li>
           <li>
-            <a href="#lorentz-force-law-on-wires" raw="## Lorentz Force Law on Wires" lo="109">
+            <a href="#lorentz-force-law-on-wires" raw="## Lorentz Force Law on Wires" lo="109" class="highlighted">
               <span class="toctext">Lorentz Force Law on Wires</span>
-            </a>
-          </li>
-          <li>
-            <a href="#solutions" raw="## Solutions" lo="124">
-              <span class="toctext">Solutions</span>
             </a>
           </li>
         </ol>
@@ -628,11 +623,11 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="1" lf="1" class=""><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1 lo="1" lf="1"><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">1</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="3" lf="3" class="">These are activities that students work on during a weekly 50–minute recitation for PHYS 260 at GMU. To maximize time that students spend working on problems, I typically give at most a 10–minute review. Often, my 10–minute overview involves working through an example that is nearly identical to the first problem. If many students are stuck on a part of the problem, I will interrupt the class and have students guide to the answer.</p>
+        <p padlength="0" lo="3" lf="3">These are activities that students work on during a weekly 50–minute recitation for PHYS 260 at GMU. To maximize time that students spend working on problems, I typically give at most a 10–minute review. Often, my 10–minute overview involves working through an example that is nearly identical to the first problem. If many students are stuck on a part of the problem, I will interrupt the class and have students guide to the answer.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">3</span></div>
       </div>
       <div class="block">
@@ -826,26 +821,26 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="78" lf="78" class="highlighted"><a name="enclosed-charge" number="3.5" lo="78" raw="## Enclosed Charge" class="anchor hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
+        <h2 lo="78" lf="78"><a name="enclosed-charge" number="3.5" lo="78" raw="## Enclosed Charge" class="anchor hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">78</span></div>
       </div>
       <div class="block">
         <ul lo="80" lf="82" class="compact">
-          <li markerlength="2" padlength="0" lo="80" lf="80" class="">
+          <li markerlength="2" padlength="0" lo="80" lf="80">
             <div class="block">
-              <p padlength="0" lo="80" lf="80" class=""><a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge/README.md">Instructor Notes</a> </p>
+              <p padlength="0" lo="80" lf="80"><a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge/README.md">Instructor Notes</a> </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">80</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="81" lf="81" class="">
+          <li markerlength="2" padlength="0" lo="81" lf="81">
             <div class="block">
-              <p padlength="0" lo="81" lf="81" class="active">Documents: | <a href="Enclosed_Charge/Enclosed_Charge.pdf">pdf</a> | <a href="Enclosed_Charge/Enclosed_Charge-solutions.pdf">pdf solns</a> |</p>
+              <p padlength="0" lo="81" lf="81">Documents: | <a href="Enclosed_Charge/Enclosed_Charge.pdf">pdf</a> | <a href="Enclosed_Charge/Enclosed_Charge-solutions.pdf">pdf solns</a> |</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">81</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="82" lf="82" class="">
+          <li markerlength="2" padlength="0" lo="82" lf="84">
             <div class="block">
-              <p padlength="0" lo="82" lf="82" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge">Github</a> | <a href="Enclosed_Charge/Enclosed_Charge.md">Markdown</a> | </p>
+              <p padlength="0" lo="82" lf="82">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge">Github</a> | <a href="Enclosed_Charge/Enclosed_Charge.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">82</span></div>
             </div>
           </li>
@@ -977,73 +972,31 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="109" lf="109"><a name="lorentz-force-law-on-wires" number="3.10" lo="109" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
+        <h2 lo="109" lf="109" class="highlighted"><a name="lorentz-force-law-on-wires" number="3.10" lo="109" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">109</span></div>
       </div>
       <div class="block">
         <ul lo="111" lf="122" class="loose">
-          <li markerlength="2" padlength="0" lo="111" lf="111">
+          <li markerlength="2" padlength="0" lo="111" lf="111" class="">
             <div class="block">
-              <p padlength="0" lo="111" lf="111"><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires/README.md">Instructor Notes</a> </p>
+              <p padlength="0" lo="111" lf="111" class=""><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires/README.md">Instructor Notes</a> </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">111</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="112" lf="116">
+          <li markerlength="2" padlength="0" lo="112" lf="116" class="">
             <div class="block">
-              <p padlength="0" lo="112" lf="116">Document: <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a></p>
+              <p padlength="0" lo="112" lf="116" class="">Document: <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a></p>
               <div class="block-info" style="display: none;"><span class="line-numbers">112-116</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="117" lf="124">
+          <li markerlength="2" padlength="0" lo="117" lf="123" class="">
             <div class="block">
-              <p padlength="0" lo="117" lf="123">Source: <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md!" target="_blank">Markdown</a> | </p>
+              <p padlength="0" lo="117" lf="123" class="active">Source: <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">117-123</span></div>
             </div>
           </li>
         </ul>
         <div class="block-info" style="display: none;"><span class="line-numbers">111-122</span></div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="block">
-        <h2 lo="124" lf="124"><a name="solutions" number="3.11" lo="124" raw="## Solutions" class="anchor hanchor" href="#solutions"><span class="hnumber">3.11</span>&nbsp;<span class="htext">Solutions</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">124</span></div>
-      </div>
-      <div class="block">
-        <p padlength="0" lo="126" lf="126">Solutions for the activities are</p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">126</span></div>
-      </div>
-      <div class="block">
-        <p padlength="0" lo="128" lf="137"><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions-solution.pdf">https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions-solution.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge-solutions.pdf">https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential-solutions.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance-solutions.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Lorentz_Force/Lorentz_Force-solutions.pdf">https://rweigel.github.io/phys260/Lorentz_Force/Lorentz_Force-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">https://rweigel.github.io/phys260/Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf</a>
-        </p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">128-137</span></div>
-      </div>
-      <div class="block">
-        <p padlength="0" lo="139" lf="139">The following are copies without solutions:</p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">139</span></div>
-      </div>
-      <div class="block">
-        <p padlength="0" lo="141" lf="150"><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions.pdf">https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge.pdf">https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Lorentz_Force/Lorentz_Force.pdf">https://rweigel.github.io/phys260/Lorentz_Force/Lorentz_Force.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">https://rweigel.github.io/phys260/Lorentz_Force_Wires/Lorentz_Force_Wires.pdf</a>
-        </p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">141-150</span></div>
       </div>
     </div>
   </div>
