--- a/Kirchhoffs_Laws/Kirchhoffs_Laws.html
+++ b/Kirchhoffs_Laws/Kirchhoffs_Laws.html
@@ -291,6 +291,11 @@
       padding-left: 0.5em;
     }
 
+    #display>.section>.block &>ol.compact {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
+    }
+
     #display>.section>.block>ol.loose {
       margin-top: 0.5em;
       margin-bottom: 0.5em;
@@ -400,11 +405,11 @@
     }
 
     .solutionsfalse {
-      display: block;
+      display: none;
     }
 
     .solutionstrue {
-      display: none;
+      display: block;
     }
 
     @media print {
@@ -545,7 +550,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#introduction" raw="# Introduction" lo="5">
+        <a href="#introduction" raw="# Introduction" lo="5" class="highlighted">
           <span class="toctext">Introduction</span>
         </a>
       </li>
@@ -565,7 +570,7 @@
         </a>
       </li>
       <li>
-        <a href="#redundant-equations" raw="# Redundant Equations" lo="162" class="highlighted">
+        <a href="#redundant-equations" raw="# Redundant Equations" lo="162">
           <span class="toctext">Redundant Equations</span>
         </a>
       </li>
@@ -590,7 +595,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="5" lf="5"><a name="introduction" number="1" lo="5" raw="# Introduction" class="anchor hanchor" href="#introduction"><span class="hnumber">1</span>&nbsp;<span class="htext">Introduction</span></a></h1>
+        <h1 lo="5" lf="5" class="highlighted"><a name="introduction" number="1" lo="5" raw="# Introduction" class="anchor hanchor" href="#introduction"><span class="hnumber">1</span>&nbsp;<span class="htext">Introduction</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
@@ -607,7 +612,7 @@
           </li>
           <li markerlength="3" padlength="0" lo="10" lf="12">
             <div class="block">
-              <p padlength="0" lo="10" lf="10">Kirchhoff’s Current Law (KCL): The sum of all currents entering and exiting a junction is zero. Or, equivalently, the current flowing into a junction is equal to the current flowing out of a junction.</p>
+              <p padlength="0" lo="10" lf="10" class="active">Kirchhoff’s Current Law (KCL): The sum of all currents entering and exiting a junction is zero. Or, equivalently, the current flowing into a junction is equal to the current flowing out of a junction.</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">10</span></div>
             </div>
           </li>
@@ -1041,7 +1046,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="162" lf="162" class="highlighted"><a name="redundant-equations" number="5" lo="162" raw="# Redundant Equations" class="anchor hanchor" href="#redundant-equations"><span class="hnumber">5</span>&nbsp;<span class="htext">Redundant Equations</span></a></h1>
+        <h1 lo="162" lf="162"><a name="redundant-equations" number="5" lo="162" raw="# Redundant Equations" class="anchor hanchor" href="#redundant-equations"><span class="hnumber">5</span>&nbsp;<span class="htext">Redundant Equations</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">162</span></div>
       </div>
       <div class="block">
@@ -1049,7 +1054,7 @@
         <div class="block-info" style="display: none;"><span class="line-numbers">164</span></div>
       </div>
       <div class="block">
-        <div class="inline-html active" lo="166" lf="166">
+        <div class="inline-html" lo="166" lf="166">
           <img src="figures/Multiple_Loops_III.svg">
         </div>
         <div class="block-info" style="display: none;"><span class="line-numbers">166</span></div>
