Lorentz Force Wires

--- a/index.html
+++ b/index.html
@@ -291,11 +291,6 @@
       padding-left: 0.5em;
     }
 
-    #display>.section>.block &>ol.compact {
-      margin-top: 0.25em;
-      margin-bottom: 0.25em;
-    }
-
     #display>.section>.block>ol.loose {
       margin-top: 0.5em;
       margin-bottom: 0.5em;
@@ -605,12 +600,17 @@
             </a>
           </li>
           <li>
-            <a href="#lorentz-force-law" raw="## Lorentz Force Law" lo="103">
+            <a href="#rc-circuits" raw="## RC Circuits" lo="103" class="highlighted">
+              <span class="toctext">RC Circuits</span>
+            </a>
+          </li>
+          <li>
+            <a href="#lorentz-force-law" raw="## Lorentz Force Law" lo="110">
               <span class="toctext">Lorentz Force Law</span>
             </a>
           </li>
           <li>
-            <a href="#lorentz-force-law-on-wires" raw="## Lorentz Force Law on Wires" lo="109" class="highlighted">
+            <a href="#lorentz-force-law-on-wires" raw="## Lorentz Force Law on Wires" lo="116">
               <span class="toctext">Lorentz Force Law on Wires</span>
             </a>
           </li>
@@ -943,26 +943,26 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="103" lf="103"><a name="lorentz-force-law" number="3.9" lo="103" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law"><span class="hnumber">3.9</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
+        <h2 lo="103" lf="103" class="highlighted"><a name="rc-circuits" number="3.9" lo="103" raw="## RC Circuits" class="anchor hanchor" href="#rc-circuits"><span class="hnumber">3.9</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">103</span></div>
       </div>
       <div class="block">
         <ul lo="105" lf="107" class="compact">
-          <li markerlength="2" padlength="0" lo="105" lf="105">
+          <li markerlength="2" padlength="0" lo="105" lf="105" class="">
             <div class="block">
-              <p padlength="0" lo="105" lf="105"><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force/README.md">Instructor Notes</a> </p>
+              <p padlength="0" lo="105" lf="105" class=""><a href="https://github.com/rweigel/phys260/tree/master/RC_Circuits/README.md">Instructor Notes</a> </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">105</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="106" lf="106">
+          <li markerlength="2" padlength="0" lo="106" lf="106" class="">
             <div class="block">
-              <p padlength="0" lo="106" lf="106">Document: | <a href="Lorentz_Force/Lorentz_Force.pdf">pdf</a> | <a href="Lorentz_Force/Lorentz_Force-solutions.pdf">pdf solns</a> |</p>
+              <p padlength="0" lo="106" lf="106" class="active">Document: | <a href="RC_Circuits/RC_Circuits.pdf">pdf</a> | <a href="RC_Circuits/RC_Circuits-solutions.pdf">pdf solns</a> |</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">106</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="107" lf="109">
+          <li markerlength="2" padlength="0" lo="107" lf="107" class="">
             <div class="block">
-              <p padlength="0" lo="107" lf="107">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force">Github</a> | <a href="Lorentz_Force_Law/Lorentz_Force_Law.md!" target="_blank">Markdown</a> | </p>
+              <p padlength="0" lo="107" lf="107" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RC_Circuits">Github</a> | <a href="RC_Circuits/RC_Circuits.md">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">107</span></div>
             </div>
           </li>
@@ -972,31 +972,60 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="109" lf="109" class="highlighted"><a name="lorentz-force-law-on-wires" number="3.10" lo="109" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">109</span></div>
+        <h2 lo="109" lf="109"><a name="lorentz-force-law" number="3.10" lo="109" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law" lf="109"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">110</span></div>
       </div>
       <div class="block">
-        <ul lo="111" lf="122" class="loose">
-          <li markerlength="2" padlength="0" lo="111" lf="111" class="">
+        <ul lo="111" lf="113" class="compact">
+          <li markerlength="2" padlength="0" lo="111" lf="111">
             <div class="block">
-              <p padlength="0" lo="111" lf="111" class=""><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires/README.md">Instructor Notes</a> </p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">111</span></div>
+              <p padlength="0" lo="111" lf="111"><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force/README.md">Instructor Notes</a> </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">112</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="112" lf="116" class="">
+          <li markerlength="2" padlength="0" lo="112" lf="112">
             <div class="block">
-              <p padlength="0" lo="112" lf="116" class="">Document: <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a></p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">112-116</span></div>
+              <p padlength="0" lo="112" lf="112">Document: | <a href="Lorentz_Force/Lorentz_Force.pdf">pdf</a> | <a href="Lorentz_Force/Lorentz_Force-solutions.pdf">pdf solns</a> |</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">113</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="117" lf="123" class="">
+          <li markerlength="2" padlength="0" lo="113" lf="115">
             <div class="block">
-              <p padlength="0" lo="117" lf="123" class="active">Source: <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md">Markdown</a> | </p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">117-123</span></div>
+              <p padlength="0" lo="113" lf="113">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force">Github</a> | <a href="Lorentz_Force_Law/Lorentz_Force_Law.md!" target="_blank">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">114</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">111-122</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">112-114</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="115" lf="115"><a name="lorentz-force-law-on-wires" number="3.11" lo="115" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires" lf="115"><span class="hnumber">3.11</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">116</span></div>
+      </div>
+      <div class="block">
+        <ul lo="117" lf="128" class="loose">
+          <li markerlength="2" padlength="0" lo="117" lf="117">
+            <div class="block">
+              <p padlength="0" lo="117" lf="117"><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires/README.md">Instructor Notes</a> </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">118</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="118" lf="122">
+            <div class="block">
+              <p padlength="0" lo="118" lf="122">Document: <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a></p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">119-123</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="123" lf="129">
+            <div class="block">
+              <p padlength="0" lo="123" lf="129">Source: <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md!" target="_blank">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">124-130</span></div>
+            </div>
+          </li>
+        </ul>
+        <div class="block-info" style="display: none;"><span class="line-numbers">118-129</span></div>
       </div>
     </div>
   </div>
